--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bitandbang",
+  "name": "alessbell",
   "version": "1.1.0",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
+  "description": "A personal card for Alessia Bellisario (@alessbell)",
   "main": "index.js",
   "bin": {
-    "bitandbang": "./bin/card.js"
+    "alessbell": "./bin/card.js"
   },
   "repository": {
     "type": "git",
