--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alessbell",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A personal card for Alessia Bellisario (@alessbell)",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bnb/bitandbang.git"
+    "url": "https://github.com/alessbell/alessbell-npx"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
